<resources>
    <string name="app_name">MaculaRehab</string>
    <string name="button_data">Data</string>
    <string name="button_create">Create</string>
    <string name="button_singin">Register</string>
    <string name="button_login">Log In</string>
    <string name="message_fill_fields">You have to fill all the fields</string>
    <string name="message_error">Error! Try Again Later</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="change_language_hint_button">Change Language</string>
    <string name="loading_contentDescription">Loading</string>
    <string name="user_created_text">User created</string>
    <string name="user_loggedIn_text">User logged in</string>
    <string name="do_not_use_camera">Select image from gallery, not from camera.\nSorry for the inconvenience</string>
    <string name="emptyField">Field is empty. Is required to fill out</string>
    <string name="required">* Required</string>
    <string name="noInternetConnection">No Internet Connection.\nPlease make sure you are connected to internet</string>
    <string name="error_fields_empty">There are some fields that are not filled up.\n\nFill the fields required before continuing.</string>
    <string name="error_fields_empty_title">There are some fields that are not filled up.</string>
    <string name="error_fields_empty_message">Fill the fields required before continuing.</string>
    <string name="error_required_field">Required</string>
    <string name="error_weak_password">Error: password must be at least 6 characters</string>
    <string name="error_passwords_not_match">Error: passwords does not match</string>
    <string name="error_no_valid_phoneNumber">Error: phone number is not valid</string>
    <string name="error_authentication_failed">Error: Authentication Failed</string>
    <string name="button_login_patient">LOGIN</string>
    <string name="button_signup_patient">Register</string>
    <string name="text_patient_account">Patient Account</string>
    <string name="text_ask_patient_login">Already have an account</string>
    <string name="text_ask_patient_signup">Create an account</string>
    <string name="text_patient_warning">You have to use the code the professional gave to you</string>
    <string name="hint_patient_login_name">Name</string>
    <string name="hint_patient_login_email">Email Address /\nUsername:</string>
    <string name="hint_patient_login_password">Numeric Code:</string>
    <string name="hint_patient_login_welcome">Welcome</string>
    <string name="hint_patient_login_login">Patient LogIn</string>
    <string name="hint_patient_login_login_button">LogIn</string>
    <string name="patient_login_youAreAProfessional">This is a Professional Account.\nPlease LogIn in the Professional Section</string>
    <string name="hint_patient_signup_name">Name</string>
    <string name="hint_patient_signup_email">Email Address /\nUsername:</string>
    <string name="hint_patient_signup_password">Numeric Code:</string>
    <string name="hint_patient_signup_repeat_password">Repeat Numeric Code:</string>
    <string name="patient_signup_repeat_password">Repeat Numeric Code:</string>
    <string name="hint_patient_signup_welcome">Welcome</string>
    <string name="hint_patient_signup_signup">SignUp</string>
    <string name="hint_patient_signup_signup_button">SignUp</string>
    <string name="hint_patient_signup_signup_button_continue">Continue SignUp</string>
    <string name="patient_signup_continue_explained">Press Continue Signup button to continue the sinning up process \nYou will have to enter the numeric code that the professional gave it to you</string>
    <string name="patient_signup_enter_username">Create an username, with no spaces, it could be your own name</string>
    <string name="patient_signup_password_explained">Enter the numeric code that the professional \ngave it to you as a password</string>
    <string name="patient_signup_passwords_doest_match">Passwords do not match</string>
    <string name="patient_signup_password_doest_exist">The code that you entered is not valid! Try again or contact your doctor</string>
    <string name="patient_signup_error_user_already_in_use">Error! User already exist</string>
    <string name="patient_signup_error_weak_password">Error! Weak Password. Contact your doctor</string>
    <string name="patient_signup_error_wrong_password">Error! Wrong Password. Contact your doctor</string>
    <string name="patient_signup_error_network_failed">Error! Network Failed</string>
    <string name="patient_signup_error_operations_not_allowed">Error! Operation Not Allowed</string>
    <string name="hint_patient_home_logout_button">LogOut</string>
    <string name="patient_home_welcome_text">Welcome</string>
    <string name="patient_home_name_default">Patient</string>
    <string name="patient_home_upload_data">Upload my data</string>
    <string name="patient_home_logOut_confirmation_message">Are you sure you want to log out?</string>
    <string name="patient_home_logOut_confirmation_message_yes_logOut">Log Out</string>
    <string name="patient_home_logOut_confirmation_message_no_cancel">Cancel</string>
    <string name="patient_professional_profile_nameText">Professional\nName:</string>
    <string name="patient_professional_profile_contactButton">Contact Professional</string>
    <string name="patient_professional_profile_emailText">Email:</string>
    <string name="patient_professional_profile_phoneText">Phone:</string>
    <string name="patient_professional_profile_phoneTextDefault">Not Available</string>
    <string name="patient_professional_profile_email_sendEmailText_button">Send Email</string>
    <string name="patient_professional_profile_email_callText_button">Call</string>
    <string name="patient_professional_profile_returnHome_button">Return Back</string>
    <string name="professional_newpatient_testOptico">Optical Tests</string>
    <string name="professional_newpatient_formularioOptico">New patient</string>
    <string name="text_professional_singup_text">Professional Sing Up</string>
    <string name="hint_professional_signup_name">Name</string>
    <string name="professional_signup_email_text">Insert Email Address</string>
    <string name="hint_professional_signup_email">Email Address</string>
    <string name="professional_signup_password_text">Insert Password</string>
    <string name="hint_professional_signup_password">Password</string>
    <string name="professional_signup_wrongPassword">Wrong Password!</string>
    <string name="hint_professional_signup_repeat_password">Repeat Password</string>
    <string name="professional_login_forgot_password">Forgot Password?</string>
    <string name="professional_login_notAProfessionalAccount">This is not a Professional Account.\nLogIn in Patient Section</string>
    <string name="professional_login_logInSuccessfully">Welcome!</string>
    <string name="professional_login_wrongPassword">Wrong Password!</string>
    <string name="professional_login_restorePassword_text">Restore Password</string>
    <string name="professional_login_restorePassword_help">We will send you an email with a link\nto restore your password</string>
    <string name="professional_login_restorePassword_insertYourEmail">Insert Your Email Address</string>
    <string name="professional_login_restorePassword_hint_email">Email Address</string>
    <string name="professional_login_restorePassword_sendEmailButton">Restore Password</string>
    <string name="professional_login_restorePassword_emailSuccessfullyText">An email was sent correctly to you email address\nCheck your inbox</string>
    <string name="professional_login_restorePassword_error_userNotFound">User Not Found</string>
    <string name="professional_login_restorePassword_error_emailNotValid">Email is not valid or in wrong format</string>
    <string name="professional_login_restorePassword_error_userMismatch">User Mismatch</string>
    <string name="professional_login_restorePassword_error_userDisabled">User Disabled</string>
    <string name="professional_home_changePassword_text">Change Password</string>
    <string name="professional_home_changePassword_oldPassword_text">Insert Old Password</string>
    <string name="professional_home_changePassword_newPassword_text">Insert New Password</string>
    <string name="professional_home_changePassword_repeatNewPassword_text">Insert Again New Password</string>
    <string name="professional_home_changePassword_oldPassword_hint">Old Password</string>
    <string name="professional_home_changePassword_newPassword_hint">New Password</string>
    <string name="professional_home_changePassword_repeatNewPassword_hint">Repeat New Password</string>
    <string name="professional_patientForm_section_1">Visual difficulties in children and adults</string>
    <string name="professional_patientForm_checkBox_1">Read</string>
    <string name="professional_patientForm_checkBox_2">Write</string>
    <string name="professional_patientForm_checkBox_3">Use phone, tablet, computer, others</string>
    <string name="professional_patientForm_checkBox_4">See whiteboard (children)</string>
    <string name="professional_patientForm_checkBox_5">Work related problems (adults)</string>
    <string name="professional_patientForm_checkBox_6">Facial recognition</string>
    <string name="professional_patientForm_checkBox_7">Watch television</string>
    <string name="professional_patientForm_checkBox_8">Move or play indoors</string>
    <string name="professional_patientForm_checkBox_9">Move or play outdoors</string>
    <string name="professional_patientForm_checkBox_10">Move from indoors to outdoors or vice versa</string>
    <string name="professional_patientForm_checkBox_11">Money management</string>
    <string name="professional_patientForm_checkBox_12">Feeding</string>
    <string name="professional_patientForm_checkBox_13">Home activities</string>
    <string name="professional_patientForm_checkBox_14">Go shopping</string>
    <string name="professional_patientForm_checkBox_15">Eating</string>
    <string name="professional_patientForm_checkBox_16">Personal care activities</string>
    <string name="professional_patientForm_section_2">Visual behaviour</string>
    <string name="professional_patientForm_checkBox_17">Do they need to move their head to see better?</string>
    <string name="professional_patientForm_checkBox_18">Do they need to be near what they are at looking at in order to see it?</string>
    <string name="professional_patientForm_checkBox_19">Prefers a specific set of illumination</string>
    <string name="professional_patientForm_checkBox_20">Does the sun or the light bother him/her?</string>
    <string name="professional_patientForm_section_3">Use of optical assistance</string>
    <string name="professional_patientForm_checkBox_21">Uses conventional glasses</string>
    <string name="professional_patientForm_checkBox_22">Uses sunglasses</string>
    <string name="professional_patientForm_checkBox_23">Are the glasses helpful?</string>
    <string name="professional_patientForm_section_4">Reading</string>
    <string name="professional_patientForm_checkBox_24">Did the person use to read more before the vision loss?</string>
    <string name="professional_patientForm_checkBox_25">Would like to read more</string>
    <string name="button_des_data">Data</string>
    <string name="button_exercises">Exercises</string>
    <string name="button_des_exercises">Exercises</string>
    <string name="imagebutton_des_settings">Change settings</string>
    <string name="textview_name">Name</string>
    <string name="textview_username">Username</string>
    <string name="textview_password">Password</string>
    <string name="textview_professional_singin">Professional Sign in</string>
    <string name="imagebutton_des_back">Go back</string>
</resources>