<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="New Patient"
        android:textSize="96sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_create_new_patient_difficulties_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button_create_new_patient_difficulties_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18">

        <LinearLayout
            android:id="@+id/create_new_patient_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_section_1"
                android:textSize="48sp" />

            <CheckBox
                android:id="@+id/check_create_patient_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_1"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="200dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/check_create_patient_1.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/professional_patientForm_checkBox_1.1"
                        android:textSize="34sp" />

                    <CheckBox
                        android:id="@+id/check_create_patient_1.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/professional_patientForm_checkBox_1.2"
                        android:textSize="34sp" />

                    <CheckBox
                        android:id="@+id/check_create_patient_1.3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/professional_patientForm_checkBox_1.3"
                        android:textSize="34sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/check_create_patient_1.4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/professional_patientForm_checkBox_1.4"
                        android:textSize="34sp" />

                    <CheckBox
                        android:id="@+id/check_create_patient_1.5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/professional_patientForm_checkBox_1.5"
                        android:textSize="34sp" />

                    <CheckBox
                        android:id="@+id/check_create_patient_1.6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/professional_patientForm_checkBox_1.6"
                        android:textSize="34sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/check_create_patient_1.7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/professional_patientForm_checkBox_1.7"
                        android:textSize="34sp" />

                    <CheckBox
                        android:id="@+id/check_create_patient_1.8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/professional_patientForm_checkBox_1.8"
                        android:textSize="34sp" />
                </LinearLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/check_create_patient_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_2"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_3"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_4"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_5"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_6"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_7"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_8"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_9"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_10"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_11"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_12"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_13"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_14"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_15"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_16"
                android:textSize="34sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_section_2"
                android:textSize="48sp" />

            <CheckBox
                android:id="@+id/check_create_patient_17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_17"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_18"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_19"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_20"
                android:textSize="34sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_section_3"
                android:textSize="48sp" />

            <CheckBox
                android:id="@+id/check_create_patient_21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_21"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_22"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_23"
                android:textSize="34sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_section_4"
                android:textSize="48sp" />

            <CheckBox
                android:id="@+id/check_create_patient_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_24"
                android:textSize="34sp" />

            <CheckBox
                android:id="@+id/check_create_patient_25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional_patientForm_checkBox_25"
                android:textSize="34sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>