<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="504dp"
        android:contentDescription="@string/app_name"
        android:text="@string/app_name"
        android:textSize="96sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_settings" />

    <ImageButton
        android:id="@+id/imageButton_settings"
        android:layout_width="133dp"
        android:layout_height="115dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#00FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/imagebutton_des_settings"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage"
        app:tint="@color/black" />

    <Button
        android:id="@+id/dataButton"
        android:layout_width="436dp"
        android:layout_height="243dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/button_des_data"
        android:onClick="onClickData"
        android:text="@string/button_data"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_app_name" />

    <Button
        android:id="@+id/button_exercises"
        android:layout_width="436dp"
        android:layout_height="243dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/pink_dark"
        android:clickable="true"
        android:contentDescription="@string/button_des_exercises"
        android:focusable="true"
        android:text="@string/button_exercises"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toEndOf="@+id/dataButton"
        app:layout_constraintTop_toBottomOf="@+id/textView_app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>