<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfessionalSingingActivity">

    <ImageButton
        android:id="@+id/imageButton_back_exerc_prof"
        android:layout_width="90dp"
        android:layout_height="79dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/grey"
        android:clickable="true"
        android:contentDescription="@string/imagebutton_des_back"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="346dp"
        android:layout_height="37dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="64dp"
        android:text="@string/textview_professional_singin"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageButton_back_exerc_prof"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="900dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <EditText
            android:id="@+id/editTextProfesionalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textview_name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextProfesionalUname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textview_username"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextProfesionalPasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textview_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/button_singIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_singin" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>